wxc/include/ewxw/wxc_glue.h


TStringLen wxFileType_ExpandCommand( TSelf(wxFileType) _obj, void* _cmd, void* _params, TStringOutVoid _buf );

TStringLen wxFileType_GetDescription( TSelf(wxFileType) _obj, TStringOutVoid _buf );

int        wxFileType_GetExtensions( TSelf(wxFileType) _obj, TClass(wxList) _lst );

int        wxFileType_GetIcon( TSelf(wxFileType) _obj, TClass(wxIcon) icon );

TStringLen wxFileType_GetMimeType( TSelf(wxFileType) _obj, TStringOutVoid _buf );

int        wxFileType_GetMimeTypes( TSelf(wxFileType) _obj, TClass(wxList) _lst );

int        wxFileType_GetOpenCommand( TSelf(wxFileType) _obj, void* _buf, void* _params );

int        wxFileType_GetPrintCommand( TSelf(wxFileType) _obj, void* _buf, void* _params );


/* wxMimeTypesManager */
TClassDef(wxMimeTypesManager)
void       wxMimeTypesManager_AddFallbacks( TSelf(wxMimeTypesManager) _obj, void* _types );

TClass(wxMimeTypesManager) wxMimeTypesManager_Create(  );

int        wxMimeTypesManager_EnumAllFileTypes( TSelf(wxMimeTypesManager) _obj, TClass(wxList) _lst );

void*      wxMimeTypesManager_GetFileTypeFromExtension( TSelf(wxMimeTypesManager) _obj, void* _ext );

void*      wxMimeTypesManager_GetFileTypeFromMimeType( TSelf(wxMimeTypesManager) _obj, TStringVoid _name );

TBool      wxMimeTypesManager_IsOfType( TSelf(wxMimeTypesManager) _obj, void* _type, void* _wildcard );

int        wxMimeTypesManager_ReadMailcap( TSelf(wxMimeTypesManager) _obj, void* _file, int _fb );

int        wxMimeTypesManager_ReadMimeTypes( TSelf(wxMimeTypesManager) _obj, void* _file );